# fire-detection

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  ForestFireDetection.ipynb  README.md  config.py  config.yaml  config_optimized.yaml  core_logging.py  data_annotation.py  data_groundtruth.py  data_loader.py  data_preprocessing.py  data_sequences.py  docker-compose.yml  model_autoencoder.py  model_clustering.py  model_evaluator.py  model_training.py  model_tuning.py  model_utils.py  preproccesing_pipeline.ipynb  pyproject.toml  reload_all.py  requirements-dev.txt  requirements.txt  run_preprocessing_pipeline.py  run_training.py  run_tuning.py  setup.py  test.ipynb  test_clustering.py  train.py  utils_time.py  viz_style.py
.github/workflows/: ci.yml
aad/: model_autoencoder.py  model_loading.py  model_tuning.py
aad/autoencoder/: clustering.py  evaluator.py  model_base.py  model_dense.py  model_vae.py  model_vae2.py  trainer_base.py  trainer_standard.py  utils.py
aad/common/: config.py  core_logging.py  data_validation.py  performance.py  reload_all.py  utils.py  utils_time.py  viz_style.py
aad/data/: annotation.py  dask_pipeline_base.py  groundtruth.py  loader.py  preprocessing.py  sequences.py  utils.py
data/: README.md
tests/: test_performance.py  test_utils.py
