[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "dask.*",
    "distributed.*",
    "plotly.*",
    "geopandas.*",
    "shapely.*",
    "kaleido.*"
]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fire-detection"
description = "Machine learning system for forest fire detection using sensor data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Fire Detection Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.0.0",
    "torch>=1.9.0", 
    "scikit-learn>=1.0.0",
    "joblib>=1.0.0",
    "geopandas>=0.10.0",
    "shapely>=1.8.0",
    "tqdm>=4.60.0",
    "plotly>=5.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "kaleido>=0.2.1",
    "dask>=2023.10.0",
    "distributed>=2023.10.0"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0"
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0"
]

[project.scripts]
fire-preprocess = "run_preprocessing_pipeline:main"
fire-train = "run_training:main"  
fire-tune = "run_tuning:main"

[project.urls]
Homepage = "https://github.com/rmukhia/fire-detection"
Repository = "https://github.com/rmukhia/fire-detection"
Issues = "https://github.com/rmukhia/fire-detection/issues"